# pgns-agent-claude

./: CONTRIBUTING.md  README.md  pyproject.toml
pgns_agent_claude/: __init__.py  _adapter.py  _version.py
tests/: test_adapter.py
